WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27863
Consolidate GeoLocation code to send positions and errors
https://bugs.webkit.org/show_bug.cgi?id=27863
Summary
Consolidate GeoLocation code to send positions and errors
Greg Bolsinga
Reported
2009-07-30 17:45:35 PDT
There is some redundancy in this code that can be cleaned up.
Attachments
Patch implementing the change
(6.17 KB, patch)
2009-07-30 17:48 PDT
,
Greg Bolsinga
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Greg Bolsinga
Comment 1
2009-07-30 17:48:43 PDT
Created
attachment 33850
[details]
Patch implementing the change
George Staikos
Comment 2
2009-07-31 07:31:22 PDT
Comment on
attachment 33850
[details]
Patch implementing the change Nice cleanup!
Greg Bolsinga
Comment 3
2009-07-31 10:04:33 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/page/Geolocation.cpp M WebCore/page/Geolocation.h Committed
r46633
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug