2009-07-30  Greg Bolsinga  <bolsinga@apple.com>

Reviewed by George Staikos.

        Consolidate GeoLocation code to send positions and errors
        https://bugs.webkit.org/show_bug.cgi?id=27863

        Create helper methods that will send positions and errors to either
        one shots or watchers.

        * page/Geolocation.cpp:
        (WebCore::Geolocation::sendError):
        (WebCore::Geolocation::sendErrorToOneShots):
        (WebCore::Geolocation::sendErrorToWatchers):
        (WebCore::Geolocation::sendPosition):
        (WebCore::Geolocation::sendPositionToOneShots):
        (WebCore::Geolocation::sendPositionToWatchers):
        * page/Geolocation.h:

Canonical link: https://commits.webkit.org/38239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46633 268f45cc-cd09-0410-ab3c-d52691b4dbfc