WebCore/page/Geolocation.cpp
@@ -143,18 +143,23 @@ void Geolocation::setIsAllowed(bool allowed)
     }
 }
 
+void Geolocation::sendError(Vector<RefPtr<GeoNotifier> >& notifiers, PositionError* error)
+{
+     Vector<RefPtr<GeoNotifier> >::const_iterator end = notifiers.end();
+     for (Vector<RefPtr<GeoNotifier> >::const_iterator it = notifiers.begin(); it != end; ++it) {
+         RefPtr<GeoNotifier> notifier = *it;
+         
+         if (notifier->m_errorCallback)
+             notifier->m_errorCallback->handleEvent(error);
+     }
+}
+
 void Geolocation::sendErrorToOneShots(PositionError* error)
 {
     Vector<RefPtr<GeoNotifier> > copy;
     copyToVector(m_oneShots, copy);
 
-    Vector<RefPtr<GeoNotifier> >::const_iterator end = copy.end();
-    for (Vector<RefPtr<GeoNotifier> >::const_iterator it = copy.begin(); it != end; ++it) {
-        RefPtr<GeoNotifier> notifier = *it;
-        
-        if (notifier->m_errorCallback)
-            notifier->m_errorCallback->handleEvent(error);
-    }
+    sendError(copy, error);
 }
 
 void Geolocation::sendErrorToWatchers(PositionError* error)
@@ -162,12 +167,23 @@ void Geolocation::sendErrorToWatchers(PositionError* error)
     Vector<RefPtr<GeoNotifier> > copy;
     copyValuesToVector(m_watchers, copy);
 
-    Vector<RefPtr<GeoNotifier> >::const_iterator end = copy.end();
-    for (Vector<RefPtr<GeoNotifier> >::const_iterator it = copy.begin(); it != end; ++it) {
+    sendError(copy, error);
+}
+
+void Geolocation::sendPosition(Vector<RefPtr<GeoNotifier> >& notifiers, Geoposition* position)
+{
+    Vector<RefPtr<GeoNotifier> >::const_iterator end = notifiers.end();
+    for (Vector<RefPtr<GeoNotifier> >::const_iterator it = notifiers.begin(); it != end; ++it) {
         RefPtr<GeoNotifier> notifier = *it;
+        ASSERT(notifier->m_successCallback);
         
-        if (notifier->m_errorCallback)
-            notifier->m_errorCallback->handleEvent(error);
+        notifier->m_timer.stop();
+        bool shouldCallErrorCallback = false;
+        notifier->m_successCallback->handleEvent(position, shouldCallErrorCallback);
+        if (shouldCallErrorCallback) {
+            RefPtr<PositionError> error = PositionError::create(PositionError::UNKNOWN_ERROR, "An exception was thrown");
+            handleError(error.get());
+        }
     }
 }
 
@@ -176,19 +192,7 @@ void Geolocation::sendPositionToOneShots(Geoposition* position)
     Vector<RefPtr<GeoNotifier> > copy;
     copyToVector(m_oneShots, copy);
     
-    Vector<RefPtr<GeoNotifier> >::const_iterator end = copy.end();
-    for (Vector<RefPtr<GeoNotifier> >::const_iterator it = copy.begin(); it != end; ++it) {
-        RefPtr<GeoNotifier> notifier = *it;
-        ASSERT(notifier->m_successCallback);
-        
-        notifier->m_timer.stop();
-        bool shouldCallErrorCallback = false;
-        notifier->m_successCallback->handleEvent(position, shouldCallErrorCallback);
-        if (shouldCallErrorCallback) {
-            RefPtr<PositionError> error = PositionError::create(PositionError::UNKNOWN_ERROR, "An exception was thrown");
-            handleError(error.get());
-        }
-    }
+    sendPosition(copy, position);
 }
 
 void Geolocation::sendPositionToWatchers(Geoposition* position)
@@ -196,19 +200,7 @@ void Geolocation::sendPositionToWatchers(Geoposition* position)
     Vector<RefPtr<GeoNotifier> > copy;
     copyValuesToVector(m_watchers, copy);
     
-    Vector<RefPtr<GeoNotifier> >::const_iterator end = copy.end();
-    for (Vector<RefPtr<GeoNotifier> >::const_iterator it = copy.begin(); it != end; ++it) {
-        RefPtr<GeoNotifier> notifier = *it;
-        ASSERT(notifier->m_successCallback);
-        
-        notifier->m_timer.stop();
-        bool shouldCallErrorCallback = false;
-        notifier->m_successCallback->handleEvent(position, shouldCallErrorCallback);
-        if (shouldCallErrorCallback) {
-            RefPtr<PositionError> error = PositionError::create(PositionError::UNKNOWN_ERROR, "An exception was thrown");
-            handleError(error.get());
-        }
-    }
+    sendPosition(copy, position);
 }
 
 void Geolocation::startTimer(Vector<RefPtr<GeoNotifier> >& notifiers)
