WebCore/page/Geolocation.h
@@ -89,8 +89,11 @@ private:
 
     bool hasListeners() const { return !m_oneShots.isEmpty() || !m_watchers.isEmpty(); }
 
+    void sendError(Vector<RefPtr<GeoNotifier> >&, PositionError*);
     void sendErrorToOneShots(PositionError*);
     void sendErrorToWatchers(PositionError*);
+    
+    void sendPosition(Vector<RefPtr<GeoNotifier> >&, Geoposition*);
     void sendPositionToOneShots(Geoposition*);
     void sendPositionToWatchers(Geoposition*);
     
